deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app-deployment-frontend
  labels:
    app: task-app-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-app-frontend
  template:
    metadata:
      labels:
        app: task-app-frontend
    spec:
      containers:
      - name: task-app-frontend-container
        image: mahadali123/task-managment-app-frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
