service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-app-service-frontend
spec:
  selector:
    app: task-app-frontend
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3000
